# DriveCk

./: .gitignore  Cargo.toml  README.md
crates/driveck-cli/: Cargo.toml
crates/driveck-cli/src/: lib.rs  main.rs
crates/driveck-core/: Cargo.toml
crates/driveck-core/src/: error.rs  formatting.rs  lib.rs  model.rs  report.rs  template.rs  validation.rs
crates/driveck-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/driveck-core/tests/: reject_regular_files.rs
crates/driveck-ffi/: Cargo.toml
crates/driveck-ffi/src/: lib.rs
crates/driveck-gtk/: Cargo.toml  build.rs
crates/driveck-gtk/resources/: driveck.gresource.xml
crates/driveck-gtk/src/: main.rs
crates/driveck-win32/: Cargo.toml  app.manifest  build.rs
crates/driveck-win32/src/: main.rs
crates/driveck-win32/src/app/: about_window.rs  layout.rs  mod.rs  report_window.rs
docs/: development.md  macos-design.md  macos-requirements.md
icon/: com.github.driveck.desktop
icon/linux/hicolor/: index.theme
macos/DriveCkMac.xcodeproj/: project.pbxproj
macos/DriveCkMacApp/: DriveCkAppKitViews.swift  DriveCkAppShellView.swift  DriveCkAppViewModel.swift  DriveCkDashboardView.swift  DriveCkMacApp.swift  DriveCkPrivilegedExecutionService.swift  DriveCkSidebarView.swift  DriveCkUIComponents.swift
macos/DriveCkMacCLI/: main.swift
macos/DriveCkMacShared/: DriveCkDiskDiscoveryService.swift  DriveCkDiskUnmountService.swift  DriveCkFFIBridge.swift  DriveCkModels.swift  DriveCkPrivilegedHelperProtocol.swift  DriveCkReportExportService.swift  DriveCkValidationCoordinator.swift
macos/Scripts/: build-rust-ffi.sh
script/: build.sh  build_and_run.sh  build_macos_app.sh  build_macos_cli.sh  build_rust.sh  common.sh  install_linux.sh  package_release.ps1  package_release.sh  uninstall_linux.sh  verify_all.sh
